--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "autoprefixer": "^10.2.3",
+    "bootstrap": "^4.6.0",
+    "contentstack": "^3.12.0",
     "next": "10.0.5",
-    "postcss": "^8.2.4",
     "react": "17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "17.0.1",
-    "sass": "^1.32.5",
-    "tailwindcss": "^2.0.2"
+    "sass": "^1.32.5"
   }
 }
