--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "5.0.0-beta1",
     "contentstack": "^3.12.0",
     "next": "10.0.5",
     "react": "17.0.1",
